tests/paczka1/small_fuzzy/31230965.err
Error in line 3: 4wZVBwSjM S134 98,3
Error in line 6: A59 S134 68,0
